# analytics

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  K8S_DEPLOYMENT.md  README.md  demo_time_field_logic.js  docker-compose.yml  k8s-manifest.yaml  pyproject.toml  requirements.txt  test_dynamic_time_field.py
.github/workflows/: ci.yml  dashboard-ci.yml  historic-performance-ci.yml  prod-deploy-service.yaml  publish-npm.yml
benchmarks/: README.md
canonical_metrics/: README.md  pyproject.toml
canonical_metrics/src/metrics_cli/: cli.py  local_files.py  transform_utils.py
canonical_metrics/src/metrics_cli/conversions/: aggregate.py  base.py  categorize_metadata.py  determine_pruning.py  filter.py  ms_to_s.py  prune.py  rename.py  round.py  sort_by_timestamp.py
canonical_metrics/src/metrics_cli/models/: canonical_metrics_entry.py  column_selection.py  condition.py  table.py
canonical_metrics/src/metrics_core/: local_files.py  transform_utils.py
canonical_metrics/src/metrics_core/conversions/: aggregate.py  filter.py  rename.py
canonical_metrics/src/metrics_core/models/: canonical_metrics_entry.py  condition.py  moving_aggregation.py  table.py
canonical_metrics/src/metrics_service/: __main__.py  cache.py  config.py  main.py
canonical_metrics/src/metrics_service/routers/: graphs.py  logs.py  metrics.py  table.py
canonical_metrics/test_env/: pyvenv.cfg
dashboard/: PUBLISHING.md  README.md  WEB_COMPONENT_USAGE.md  package-lock.json  package.json  rollup.config.js  tsconfig.build.json
dashboard-test-app/: .gitignore  README.md  index.html  package-lock.json  package.json
dashboard-test-app/src/: App.tsx  main.tsx
dashboard/coverage/: clover.xml
dashboard/coverage/lcov-report/: index.html
dashboard/scripts/: build-css.js  post-build.js
dashboard/src/: dashboard-styles.ts  examples.tsx  index.css
dashboard/src/components/: Dashboard.tsx  LogsDashboard.tsx  TableDashboard.tsx  TimeSeriesDashboard.tsx  index.ts
dashboard/src/components/__tests__/: TimeSeriesDashboard.test.tsx  colorStability.test.ts
dashboard/src/components/shared/: SharedComponents.test.tsx  SharedComponents.tsx  types.ts
evaluation/: README.md  __init__.py  data.py  models_pricing.json  pyproject.toml  table.py
evaluation/evaluation/: data.py  table.py
historic_performance/: PUBLISHING.md  README.md  WEB_COMPONENT_USAGE.md  package-lock.json  package.json
historic_performance/public/: index.html
historic_performance/src/: App.tsx  examples.tsx  index.css
historic_performance/src/components/: Dashboard.tsx  LogsDashboard.tsx  MetricsDashboard.tsx  TableDashboard.tsx  TimeSeriesDashboard.tsx  index.ts
historic_performance/src/components/shared/: SharedComponents.tsx  types.ts
integrations/livebench/scrape_livebench_scores/: README.md  download.py  pyproject.toml
integrations/nearai_registry/download_logs/: README.md  download.py  pyproject.toml
metrics_cli/: README.md  __main__.py  cli.py  pyproject.toml
metrics_core/: README.md  agent_hosting_analytics.py  local_files.py  pyproject.toml  transform_utils.py
metrics_core/conversions/: base.py  categorize_metadata.py  determine_pruning.py  ms_to_s.py  prune.py  round.py  sort_by_timestamp.py
metrics_core/models/: canonical_metrics_entry.py  grouped_canonical_metrics.py  table.py
metrics_core/service_models/: agent_hosting_models.py
metrics_service/: README.md  __main__.py  main.py  pyproject.toml
metrics_service/routers/: agent_hosting.py  graphs.py  logs.py  metrics.py  table.py
metrics_service/utils/: cache.py  config.py
scripts/: daily-scrape.sh  format_check.sh  init.sh  lint_check.sh  run-livebench-scraper.sh  type_check.sh
