[tool.poetry]
name = "metrics_core"
version = "0.0.1"
description = "AI agent analytics metrics core utilities"
authors = ["Support <support@near.ai>"]
readme = "README.md"
packages = [
    {include = "metrics_core", from = ".."}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
