[tool.poetry]
name = "scrape_livebench_scores"
version = "0.0.1"
description = "Download scores from livebench leaderboard"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datasets = "^2.14.0"
pandas = "^2.0.0"
huggingface-hub = "^0.17.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
